<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.detail.DetailFragment">


    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imagenalto" />


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_retorno"
        android:contentDescription="Back" />


    <ImageButton
        android:id="@+id/heartButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_corazon"
        android:contentDescription="Heart" />


    <LinearLayout
        android:id="@+id/locationAndPriceLayout"
        android:layout_below="@id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/durationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/locationSubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_subtitle"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_producto"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="end|center_horizontal" />
    </LinearLayout>

    <!-- Overview -->
    <TextView
        android:id="@+id/overviewHeader"
        android:layout_below="@id/locationAndPriceLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/texto_resumen"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/overviewText"
        android:layout_below="@id/overviewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/texto_resumen_viaje"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/photosHeader"
        android:layout_below="@id/overviewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/texto_fotos"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/photosLayout"
        android:layout_below="@id/photosHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/playa1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/playa2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/playa3" />
    </LinearLayout>


    <Button
        android:id="@+id/bookButton"
        android:layout_below="@id/photosLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:backgroundTint="@color/orange"
        android:text="@string/book_now"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>
